feat(entry-point-facade): delete message
